feat: Renommer le projet Aidoku en TomoScan et mettre à jour les ressources associées

--- a/Shared/Localization/en.lproj/InfoPlist.strings
+++ b/Shared/Localization/en.lproj/InfoPlist.strings
@@ -1,9 +1,9 @@
-/* 
+/*
   InfoPlist.strings
-  Aidoku
+  TomoScan
 
   Created by Skitty on 4/24/22.
-  
+
 */
 
-"CFBundleDisplayName" = "Aidoku";
+"CFBundleDisplayName" = "TomoScan";
